@@ -1,3 +1,8 @@
+2005-11-04  Jean-Claude Wippler  <jcw@equi4.com>
+
+	* library/mkclvfs.tcl: some more thrill api mods
+	* pkgIndex.tcl.in, library/pkgIndex.tcl: bumped to 1.2
+
 2005-11-01  Jean-Claude Wippler  <jcw@equi4.com>
 
 	* library/mkclvfs.tcl: renamed vlerq package to thrill
